test/error/test6.pl0
PROGRAM test6
VAR x,y:=2;
BEGIN
    y:=y+x
END